RESOLVED FIXED137568
@supports should not work if "not", "or", or "and" isn't follow by a space
https://bugs.webkit.org/show_bug.cgi?id=137568
Summary @supports should not work if "not", "or", or "and" isn't follow by a space
Dean Jackson
Reported 2014-10-09 13:27:34 PDT
See URL. Chrome and Firefox pass this test.
Attachments
Radar WebKit Bug Importer
Comment 1 2014-10-09 13:27:51 PDT
Ryosuke Niwa
Comment 2 2022-08-07 11:31:33 PDT
*** Bug 216003 has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 3 2022-08-07 11:45:13 PDT
EWS
Comment 4 2022-08-07 15:53:15 PDT
Committed 253194@main (dcf7924cd7cf): <https://commits.webkit.org/253194@main> Reviewed commits have been landed. Closing PR #3090 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.