@supports should not work if "not", "or", or "and" isn't follow by a space https://bugs.webkit.org/show_bug.cgi?id=137568

Reviewed by Dean Jackson.

Match the behaviors of spec, Gecko, and Blink by rejecting "not", "or", or "and" not followed by a space:
https://drafts.csswg.org/css-conditional-3/#typedef-supports-decl

* LayoutTests/TestExpectations: Removed failing expectations from now passing tests.
* LayoutTests/css3/supports-dom-api.html:
* LayoutTests/css3/supports-expected.txt:
* LayoutTests/css3/supports.html:
* Source/WebCore/css/parser/CSSSupportsParser.cpp:
(WebCore::CSSSupportsParser::consumeCondition):
(WebCore::CSSSupportsParser::consumeNegation):

Canonical link: https://commits.webkit.org/253194@main